# cpt-lib

./: CMakeLists.txt  LICENSE.txt  dependencies.cmake  lib_dependencies.cmake  library.h  project_options.cmake  vcpkg.json
.github/workflows/: test.yml
cmake/: cpt-lib-config.cmake  cpt_lib-config.cmake  external_dependencies.cmake  project_options.cmake
src/: CMakeLists.txt  Files.cpp  Strings.cpp  files.cpp  library.cpp  log.cpp  strings.cpp
src/include/cpt/: Concepts.hpp  Files.hpp  Lib.hpp  Optional.hpp  Result.hpp  Strings.hpp  Types.hpp  Vec2.hpp  callback.hpp  concepts.hpp  exception.hpp  files.hpp  lib.hpp  log.hpp  rect.hpp  strings.hpp  types.hpp  unique_value.hpp  vec2.hpp
test/: CMakeLists.txt  Test_Concepts.cpp  Test_Files.cpp  Test_Optional.cpp  Test_Result.cpp  Test_Strings.cpp  Test_Types.cpp  Test_Vec2.cpp  test_callback.cpp  test_concepts.cpp  test_files.cpp  test_log.cpp  test_strings.cpp  test_types.cpp  test_unique_value.cpp  test_vec2.cpp
